@@ -41,6 +41,7 @@ Imports:
 Suggests:
     AER,
     arm,
+    car,
     ggplot2,
     graphics,
     Hmisc,
