@@ -10,13 +10,16 @@ S3method(print,se.icc.lme4)
 S3method(print,sj_mwu)
 S3method(print,sj_resample)
 S3method(print,sj_splithalf)
+S3method(print,sjstats_outliers)
 S3method(print,sjstats_r2)
 S3method(print,sjstats_zcf)
+export(autocorrelation)
 export(boot_ci)
 export(boot_p)
 export(boot_se)
 export(bootstrap)
 export(center)
+export(check_assumptions)
 export(chisq_gof)
 export(cod)
 export(converge_ok)
@@ -27,6 +30,7 @@ export(deff)
 export(eta_sq)
 export(get_model_pval)
 export(get_re_var)
+export(heteroskedastic)
 export(hoslem_gof)
 export(icc)
 export(inequ_trend)
@@ -34,8 +38,11 @@ export(levene_test)
 export(mean_n)
 export(mic)
 export(mse)
+export(multicollin)
 export(mwu)
+export(normality)
 export(odds_to_rr)
+export(outliers)
 export(overdisp)
 export(phi)
 export(pred_vars)
@@ -65,6 +72,7 @@ export(wtd_se)
 export(zero_count)
 importFrom(MASS,loglm)
 importFrom(Matrix,solve)
+importFrom(car,vif)
 importFrom(coin,pvalue)
 importFrom(coin,statistic)
 importFrom(coin,wilcox_test)
@@ -125,10 +133,13 @@ importFrom(stats,qt)
 importFrom(stats,quantile)
 importFrom(stats,resid)
 importFrom(stats,residuals)
+importFrom(stats,rstandard)
 importFrom(stats,sd)
 importFrom(stats,setNames)
+importFrom(stats,shapiro.test)
 importFrom(stats,summary.lm)
 importFrom(stats,terms)
+importFrom(stats,update)
 importFrom(stats,var)
 importFrom(stats,weights)
 importFrom(stats,wilcox.test)
